fix divider and highlight color on safari

--- a/opennms-webapp/src/main/webapp/css/dashboard.css
+++ b/opennms-webapp/src/main/webapp/css/dashboard.css
@@ -22,13 +22,7 @@ table.dashboard table > tbody > tr > td {
 }
 
 table.dashboard table > tbody > tr.CellStatus > td.selected {
-	background-color: highlight;
-}
-
-table.dashboard table > tbody > tr.CellStatus > td {
-	background-position:left top;
-	background-repeat:repeat-y;
-	padding-left:20px;
+	background-color: #5D7CBA;
 }
 
 table.dashboard table > tbody > tr > td.divider {
@@ -38,6 +32,12 @@ table.dashboard table > tbody > tr > td.divider {
 
 table.dashboard table > tbody > tr > td.bright {
 	padding-left: 20px;
+}
+
+table.dashboard table > tbody > tr.CellStatus > td {
+	background-position:left top;
+	background-repeat:repeat-y;
+	padding-left:20px;
 }
 
 .gwt-Label {
@@ -65,7 +65,7 @@ table.pager td {
 }
 
 tr.header td.selected {
-	background-color: highlight;
+	background-color: #5D7CBA;
 }
 
 tr.header td {
